Updated upload form

--- a/ledger/templates/api/components/upload-form.html
+++ b/ledger/templates/api/components/upload-form.html
@@ -20,7 +20,7 @@
 
             <!-- Render the 'transaction_csv' field -->
             <div class="mb-3">
-                <label for="id_transaction_csv" class="form-label">Transaction CSV</label>
+                <label for="id_transaction_csv" class="form-label">CSV</label>
                 <input type="file" name="transaction_csv" id="id_transaction_csv" class="form-control-file">
             </div>
 
