--- a/ledger/templates/api/components/tax-table.html
+++ b/ledger/templates/api/components/tax-table.html
@@ -1,3 +1,5 @@
+{% load humanize %}
+
 <div class="row">
     <div class="col">
     <table class="table table-hover table-sm">
@@ -17,9 +19,9 @@
                     <td>{{ tax_charge.type }}</td>
                     <td>{{ tax_charge.transaction }}</td>
                     <td>{{ tax_charge.date }}</td>
-                    <td>{{ tax_charge.amount }}</td>
-                    <td>{{ tax_charge.taxable_income }}</td>
-                    <td>{{ tax_charge.tax_rate }}</td>
+                    <td>${{ tax_charge.amount|floatformat:2|intcomma }}</td>
+                    <td>${{ tax_charge.taxable_income|floatformat:2|intcomma }}</td>
+                    <td>{{ tax_charge.tax_rate|floatformat:4 }}%</td>
                 </tr>
             {% empty %}
                 <tr>
