--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -4,7 +4,7 @@
     id="journal-entry-form"
     method="post"
     class="form-horizontal form-sm"
-    hx-post="{% url 'create-journal-entry-items' transaction_id %}"
+    hx-post="{% url 'journal-entries' transaction_id %}"
     hx-target="#table-and-form"
     hx-trigger="submit"
     hx-include="#transactions-filter-form"
