--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -3,11 +3,7 @@
     {{ filter_form }}
 
     <div id="table-and-form">
-        {% include "api/components/clickable-row-script.html" %}
-        {{ table }}
-        <div id="journal-entry-item-form">
-            {{ entry_form }}
-        </div>
+        {{ table_and_form }}
     </div>
 
 
