Think I fixed the indexing bug

--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -11,6 +11,8 @@
 >
 
     {% csrf_token %}
+    Index: {{ index }}
+    Txn ID: {{ transaction_id }}
     <input type="hidden" name="index" value="{{ index }}">
     <div class="row">
         <div class="col-12">
