--- a/ledger/templates/api/tables/transactions-table.html
+++ b/ledger/templates/api/tables/transactions-table.html
@@ -12,8 +12,10 @@
             </tr>
         </thead>
         <tbody>
+            Index: {{index}}
+            Tranaction ID: {{ index_txn_id }}
             {% for transaction in transactions %}
-            <tr class="clickable-row{% if forloop.counter0 == index and not no_highlight %} table-active{% endif %}" hx-get="{% url 'journal-entry-form' transaction.id %}?row_index={{ forloop.counter0 }}" hx-target="#journal-entry-item-form" data-transaction-id="{{ transaction.id }}">
+            <tr class="clickable-row{% if forloop.counter0 == index and not no_highlight %} table-active{% endif %}" hx-get="{% url 'journal-entry-form' transaction.id %}?row_index={{ forloop.counter0 }}" hx-target="#journal-entry-item-form">
                 <td>{{ transaction.date }}</td>
                 <td>{{ transaction.account }}</td>
                 <td>${{ transaction.amount|floatformat:2|intcomma }}</td>
