--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -11,8 +11,6 @@
 >
 
     {% csrf_token %}
-    Index: {{ index }}
-    Txn ID: {{ transaction_id }}
     <input type="hidden" name="index" value="{{ index }}">
     <div class="row">
         <div class="col-12">
@@ -28,7 +26,12 @@
             <div class="row">
                 <div class="col-md-6">
                     {{ form.id }}
-                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}" tabindex="{{ forloop.counter|multiply:4|add:1 }}">
+                    <select
+                        class="form-control select2"
+                        name="{{ form.account.html_name }}"
+                        id="{{ form.account.auto_id }}"
+                        tabindex="{{ forloop.counter|multiply:4|add:1 }}"
+                        >
                         {% for option in form.account %}
                             {{ option }}
                         {% endfor %}
@@ -56,7 +59,12 @@
             <div class="row">
                 <div class="col-md-6">
                     {{ form.id }}
-                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}" tabindex="{{ forloop.counter|multiply:4|add:3 }}">
+                    <select
+                        class="form-control select2"
+                        name="{{ form.account.html_name }}"
+                        id="{{ form.account.auto_id }}"
+                        tabindex="{{ forloop.counter|multiply:4|add:3 }}"
+                        >
                         {% for option in form.account %}
                             {{ option }}
                         {% endfor %}
