Got everything except the filter working on the Linking view

--- a/ledger/templates/api/components/transactions-link-content.html
+++ b/ledger/templates/api/components/transactions-link-content.html
@@ -1,3 +1,5 @@
-{% include "api/components/transactions-table.html" %}
-{% include "api/components/transaction-link-form.html" %}
+{{ table }}
+<div id="link-form">
+    {{ link_form }}
+</div>
 {% include "api/components/two-row-select-script.html" %}
