--- a/ledger/templates/api/entry_forms/transaction-link-form.html
+++ b/ledger/templates/api/entry_forms/transaction-link-form.html
@@ -8,7 +8,7 @@
 >
     {% csrf_token %}
 
-    {{ linked_transaction_form }}
+    {{ link_form }}
 
     <div class="row">
         <div class="col-12">
