--- a/ledger/templates/api/views/transactions-linking.html
+++ b/ledger/templates/api/views/transactions-linking.html
@@ -3,9 +3,7 @@
     {{ filter_form }}
 
     <div id="table-and-form">
-        {% include "api/components/two-row-select-script.html" %}
-        {% include "api/components/transactions-table.html" %}
-        {% include "api/components/transaction-link-form.html" %}
+        {{ table_and_form }}
     </div>
 
 
