--- a/ledger/templates/api/components/nav.html
+++ b/ledger/templates/api/components/nav.html
@@ -21,6 +21,9 @@
                 <li class="nav-item {% if request.resolver_match.url_name == 'upload-transactions' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'upload-transactions' %}" hx-get="{% url 'upload-transactions' %}" hx-target="#container">Upload</a>
                 </li>
+                <li class="nav-item {% if request.resolver_match.url_name == 'trend' %}active{% endif %}">
+                    <a class="nav-link" href="{% url 'trend' %}">Download</a>
+                </li>
             </ul>
         </div>
     </div>
