--- a/ledger/templates/api/tables/tax-table.html
+++ b/ledger/templates/api/tables/tax-table.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-
+{% load math_filters %}
 <div class="row">
     <div class="col">
     <table class="table table-hover table-sm">
@@ -21,7 +21,7 @@
                     <td>{{ tax_charge.date }}</td>
                     <td>${{ tax_charge.amount|floatformat:2|intcomma }}</td>
                     <td>${{ tax_charge.taxable_income|floatformat:2|intcomma }}</td>
-                    <td>{{ tax_charge.tax_rate|floatformat:4 }}%</td>
+                    <td>{{ tax_charge.tax_rate|multiply:100|floatformat:2 }}%</td>
                 </tr>
             {% empty %}
                 <tr>
