Cleaned up forms in Tax view

--- a/ledger/templates/api/components/taxes-content.html
+++ b/ledger/templates/api/components/taxes-content.html
@@ -5,8 +5,9 @@
 </div>
 <br>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col">
     <div id="form-container">
     {{ form }}
+    </div>
     </div>
 </div>
