--- a/ledger/templates/api/tables/reconciliation-table.html
+++ b/ledger/templates/api/tables/reconciliation-table.html
@@ -1,6 +1,5 @@
 {% load humanize %}
 <div class="row">
-    <div class="col-md-6">
     <form
     method="post"
     class="form-sm"
@@ -10,42 +9,82 @@
     hx-include="#reconciliation-filter-form"
 >
         {% csrf_token %}
-        <table class="table table-sm">
-            <thead>
-                <tr>
-                    <th>Account</th>
-                    <th>Current</th>
-                    <th>Amount</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{ formset.management_form }}
-                {% for reconciliation, form in zipped_reconciliations %}
-                    {{ form.id }}
-                    <tr class="{% if reconciliation.current_balance != form.amount.value %}highlight-yellow{% endif %}">
-                        <td>{{ reconciliation.account }}</td>
-                        <td>${{ reconciliation.current_balance|floatformat:2|intcomma }}</td>
-                        <td>
-                            <div class="form-row">
-                                <div class="col">
-                                    <div class="input-group input-group-sm">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text">$</span>
+        <div class="row">
+        <div class="col-md-6">
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th>Account</th>
+                        <th>Current</th>
+                        <th>Amount</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{ formset.management_form }}
+                    {% for reconciliation, form in left_reconciliations %}
+                        {{ form.id }}
+                        <tr class="{% if reconciliation.current_balance != form.amount.value %}highlight-yellow{% endif %}">
+                            <td>{{ reconciliation.account }}</td>
+                            <td>${{ reconciliation.current_balance|floatformat:2|intcomma }}</td>
+                            <td>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <div class="input-group input-group-sm">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">$</span>
+                                            </div>
+                                            <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" value="{{ form.amount.value|default_if_none:'' }}" class="form-control">
                                         </div>
-                                        <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" value="{{ form.amount.value|default_if_none:'' }}" class="form-control">
                                     </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="submit" name="plug" value="{{ form.instance.id }}" class="btn btn-secondary">Plug</button>
-                        </td>
+                            </td>
+                            <td>
+                                <button type="submit" name="plug" value="{{ form.instance.id }}" class="btn btn-secondary">Plug</button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th>Account</th>
+                        <th>Current</th>
+                        <th>Amount</th>
+                        <th>Action</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <button class="btn btn-primary" type="submit" value="Submit">Update</button>
-    </form>
+                </thead>
+                <tbody>
+                    {{ formset.management_form }}
+                    {% for reconciliation, form in right_reconciliations %}
+                        {{ form.id }}
+                        <tr class="{% if reconciliation.current_balance != form.amount.value %}highlight-yellow{% endif %}">
+                            <td>{{ reconciliation.account }}</td>
+                            <td>${{ reconciliation.current_balance|floatformat:2|intcomma }}</td>
+                            <td>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <div class="input-group input-group-sm">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">$</span>
+                                            </div>
+                                            <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" value="{{ form.amount.value|default_if_none:'' }}" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <button type="submit" name="plug" value="{{ form.instance.id }}" class="btn btn-secondary">Plug</button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
+    <button class="btn btn-primary" type="submit" value="Submit">Update</button>
+    </form>
 </div>
