--- a/ledger/templates/api/views/amortizations.html
+++ b/ledger/templates/api/views/amortizations.html
@@ -1,7 +1,11 @@
 <h2>Amortizations</h2>
 
-{{ filter_form }}
+<h4>Unattached Prepaid Expenses</h4>
+<div id="create-amortizations">
+    {{ unattached_transactions }}
+</div>
 
+<h4>Open Amortizations</h4>
 <div id="table-and-form">
     {{ table_and_form }}
 </div>
