Can create new amortizations

--- a/ledger/templates/api/components/clickable-row-script.html
+++ b/ledger/templates/api/components/clickable-row-script.html
@@ -1,16 +1,19 @@
 <script>
-    $(document).ready(function(){
-        // Functionality to highlight a row
-        $('.clickable-row').click(function() {
-            if (!$(this).hasClass('table-active')) {
-                $('.clickable-row').removeClass('table-active');
-                $(this).addClass('table-active');
-            }
-        });
-
-        // Functionality to clear the highlight from all rows
-        $('#clear-button').click(function() {
-            $('.clickable-row').removeClass('table-active');
-        });
+$(document).ready(function(){
+    // Functionality to highlight a row
+    $('.clickable-row').click(function() {
+        var $currentTable = $(this).closest('table');
+        if (!$(this).hasClass('table-active')) {
+            $currentTable.find('.clickable-row').removeClass('table-active');
+            $(this).addClass('table-active');
+        }
     });
+
+    // Functionality to clear the highlight from rows of a specific table
+    $('.clear-button').click(function() {
+        var $currentTable = $(this).closest('table');
+        $currentTable.find('.clickable-row').removeClass('table-active');
+    });
+});
+
 </script>
