--- a/ledger/templates/api/tables/amortization-table.html
+++ b/ledger/templates/api/tables/amortization-table.html
@@ -4,24 +4,22 @@
         <div id="amortization-table" class="table-responsive" style="max-height: 200px; overflow-y: auto;">
             <table class="table table-hover table-sm">
                 <thead>
-                    <tr>
-                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Transaction</th>
-                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Amount</th>
-                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Remaining</th>
-                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Periods</th>
+                    <tr class="clickable-row">
+                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Date</th>
+                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Expense Account</th>
                         <th style="position: sticky; top: 0; background: white; z-index: 10;">Description</th>
-                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Account</th>
+                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Amount (Remaining)</th>
+                        <th style="position: sticky; top: 0; background: white; z-index: 10;">Periods (Remaining)</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for amortization in amortizations %}
-                    <tr>
-                        <td>{{ amortization.accrued_transaction }}</td>
-                        <td>${{ amortization.amount|floatformat:2|intcomma }}</td>
-                        <td>${{ amortization.remaining|floatformat:2|intcomma }}</td>
-                        <td>{{ amortization.periods }}</td>
-                        <td>{{ amortization.description }}</td>
+                    <tr class="clickable-row">
+                        <td>{{ amortization.accrued_transaction.date }}</td>
                         <td>{{ amortization.suggested_account }}</td>
+                        <td>{{ amortization.description }}</td>
+                        <td>${{ amortization.amount|floatformat:2|intcomma }} (${{ amortization.remaining_balance|floatformat:2|intcomma }})</td>
+                        <td>{{ amortization.periods }} ({{ amortization.remaining_periods }})</td>
                     </tr>
                     {% endfor %}
                 </tbody>
