Got amortizations working

--- a/ledger/templates/api/views/amortizations.html
+++ b/ledger/templates/api/views/amortizations.html
@@ -7,7 +7,7 @@
 
 <h4>Open Amortizations</h4>
 <div id="table-and-form">
-    {{ table_and_form }}
+    {{ amortize }}
 </div>
 
 {% include "api/components/clickable-row-script.html" %}
