--- a/ledger/templates/api/tables/amortization-table.html
+++ b/ledger/templates/api/tables/amortization-table.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 <div class="row">
     <div class="col-md-12">
-        <div id="amortization-table" class="table-responsive" style="max-height: 200px; overflow-y: auto;">
+        <div id="amortization-table" class="table-responsive">
             <table class="table table-hover table-sm">
                 <thead>
                     <tr class="clickable-row">
@@ -14,7 +14,11 @@
                 </thead>
                 <tbody>
                     {% for amortization in amortizations %}
-                    <tr class="clickable-row">
+                    <tr
+                        class="clickable-row"
+                        hx-get="{% url 'amortize-form' amortization.id %}"
+                        hx-target="#amortize-form"
+                    >
                         <td>{{ amortization.accrued_transaction.date }}</td>
                         <td>{{ amortization.suggested_account }}</td>
                         <td>{{ amortization.description }}</td>
