Reload all content on Amortization page when amortization created

--- a/ledger/templates/api/entry_forms/amortization-form.html
+++ b/ledger/templates/api/entry_forms/amortization-form.html
@@ -3,7 +3,7 @@
     id="amortization-form"
     method="post"
     hx-post="{% url 'amortization' %}"
-    hx-target="#create-amortizations"
+    hx-target="#container"
     hx-trigger="submit"
 >
     <div class="form-row">
