--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -32,16 +32,21 @@
                 <div class="row">
                     <div class="col-md-6">
                         {{ form.id }}
-                        <select
-                            class="form-control select2 {% if form.account.errors %}is-invalid{% endif %}"
+                        <input
+                            class="form-control {% if form.account.errors %}is-invalid{% endif %}"
+                            list="debitAccountOptions"
                             name="{{ form.account.html_name }}"
                             id="{{ form.account.auto_id }}"
                             tabindex="{{ forloop.counter|multiply:4|add:1 }}"
+                            value="{% if form.account.value %}{{ form.account.value }}{% endif %}"
+                            {% if not autofocus_debit %}autofocus{% endif %}
                             >
-                            {% for option in form.account %}
-                                {{ option }}
-                            {% endfor %}
-                        </select>
+                            <datalist id="debitAccountOptions">
+                                {% for value, text in form.account.field.choices %}
+                                    <option value="{{ text }}">
+                                {% endfor %}
+                            </datalist>
+                        </input>
                         <div class="invalid-feedback">
                             {% for error in form.account.errors %}
                                 {{ error }}
@@ -56,7 +61,6 @@
                             id="{{ form.amount.auto_id }}"
                             value="{% if form.amount.value == 0 %}0.00{% else %}{{ form.amount.value }}{% endif %}"
                             tabindex="{{ forloop.counter|multiply:4|add:2 }}"
-                            {% if not autofocus_debit %}autofocus{% endif %}
                         >
                         <div class="invalid-feedback">
                             {% for error in form.amount.errors %}
@@ -76,16 +80,21 @@
                 <div class="row">
                     <div class="col-md-6">
                         {{ form.id }}
-                        <select
-                            class="form-control select2 {% if form.account.errors %}is-invalid{% endif %}"
+                        <input
+                            class="form-control {% if form.account.errors %}is-invalid{% endif %}"
+                            list="debitAccountOptions"
                             name="{{ form.account.html_name }}"
                             id="{{ form.account.auto_id }}"
-                            tabindex="{{ forloop.counter|multiply:4|add:3 }}"
+                            tabindex="{{ forloop.counter|multiply:4|add:1 }}"
+                            value="{% if form.account.value %}{{ form.account.value }}{% endif %}"
+                            {% if autofocus_debit %}autofocus{% endif %}
                             >
-                            {% for option in form.account %}
-                                {{ option }}
-                            {% endfor %}
-                        </select>
+                            <datalist id="debitAccountOptions">
+                                {% for value, text in form.account.field.choices %}
+                                    <option value="{{ text }}">
+                                {% endfor %}
+                            </datalist>
+                        </input>
                         <div class="invalid-feedback">
                             {% for error in form.account.errors %}
                                 {{ error }}
@@ -100,7 +109,6 @@
                             id="{{ form.amount.auto_id }}"
                             value="{% if form.amount.value == 0 %}0.00{% else %}{{ form.amount.value }}{% endif %}"
                             tabindex="{{ forloop.counter|multiply:4|add:4 }}"
-                            {% if autofocus_debit %}autofocus{% endif %}
                         >
                         <div class="invalid-feedback">
                             {% for error in form.amount.errors %}
