--- a/ledger/templates/api/views/taxes.html
+++ b/ledger/templates/api/views/taxes.html
@@ -3,5 +3,7 @@
     {{ filter_form }}
 
     <div id="table-and-form">
-        {% include "api/components/taxes-content.html" %}
+        {{ tax_charge_table }}
+
+        {{ form }}
     </div>
