--- a/ledger/templates/api/views/upload-transactions.html
+++ b/ledger/templates/api/views/upload-transactions.html
@@ -3,3 +3,9 @@
 {{ form }}
 
 {{ success }}
+<br>
+<div class="row">
+    <div class="col">
+        <a href="{% url 'trend' %}" class="btn btn-primary">Download summary CSV</a>
+    </div>
+</div>
