--- a/ledger/templates/api/entry_forms/wallet-form.html
+++ b/ledger/templates/api/entry_forms/wallet-form.html
@@ -23,7 +23,9 @@
                     <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}"
                         class="form-control"
                         value="{{ form.amount.value|default_if_none:'' }}"
-                        placeholder="{{ form.amount.label }}">
+                        placeholder="{{ form.amount.label }}"
+                        autofocus
+                    >
                 </div>
                 {% for error in form.amount.errors %}
                     <div class="alert alert-danger">{{ error }}</div>
