--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -1,5 +1,4 @@
     {% load math_filters %}
-
     <form
         id="journal-entry-form"
         method="post"
@@ -28,6 +27,7 @@
             <div class="col-md-6">
                 <h3>Debits</h3>
                 {{ debit_formset.management_form }}
+                Total Debits: $<span id="totalDebits">0.00</span>
                 {% for form in debit_formset %}
                 <div class="row">
                     <div class="col-md-6">
@@ -76,6 +76,7 @@
             <div class="col-md-6">
                 <h3>Credits</h3>
                 {{ credit_formset.management_form }}
+                Total Credits: $<span id="totalCredits">0.00</span>
                 {% for form in credit_formset %}
                 <div class="row">
                     <div class="col-md-6">
@@ -121,3 +122,6 @@
             </div>
         </div>
     </form>
+{% block extra_js %}
+{% include 'api/components/jei-totals-script.html' %}
+{% endblock %}
